--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore src"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.14.0",
+    "@cloudinary/vue": "^1.11.2",
     "axios": "^0.21.4",
     "bootstrap": "^5.3.2",
     "vue": "^3.3.4",
