--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/vue": "^1.11.2",
     "axios": "^0.21.4",
     "bootstrap": "^5.3.2",
+    "cloudinary-core": "^2.13.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
     "vuex": "^4.1.0"
